--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,22 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@tinymce/tinymce-react": "^6.2.1",
+    "@tiptap/extension-bubble-menu": "^2.22.3",
+    "@tiptap/extension-link": "^2.22.3",
+    "@tiptap/extension-underline": "^2.22.3",
+    "@tiptap/react": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
+    "chartjs": "^0.3.24",
+    "framer-motion": "^12.18.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.12.0",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1"
   },
